--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+### WebStorm ###
+.idea/
+.DS_STORE
+
+### Node ###
 lib-cov
 *.seed
 *.log
@@ -12,3 +17,9 @@ logs
 results
 
 npm-debug.log
+node_modules
+
+## Private Scripts ##
+.npm
+.git
+.build*
